fixed double scroll bars

--- a/themes/dnaminfo-theme/assets/sass/global.scss
+++ b/themes/dnaminfo-theme/assets/sass/global.scss
@@ -68,6 +68,7 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 main {
