--- a/themes/dnaminfo-theme/assets/sass/tufte.scss
+++ b/themes/dnaminfo-theme/assets/sass/tufte.scss
@@ -301,6 +301,7 @@
   pre {
     width: $ldesktop-width;
     overflow-x: auto;
+    overflow-y: hidden;
 
     & > code {
       color: inherit;
